[package]
name = "bevy_limbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
rand = "0.8.5"
bevy_mod_fbx = "0.3.0"    # Autodesk Filmbox (*.fbx) loader for Bevy Engine
perlin2d = "0.2.6"                     # Lightning fast 2D Perlin Noise generator
bevy_pancam = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
